[package]
name = "doghack"
version = "0.1.0"
authors = ["Dan Fuller <dfuller@sentry.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1" ,features = ["serde"] }
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
specs = { version="0.16.1", features = ["serde"] }
specs-derive = "0.4.0"
smallvec = "1.4.1"

